--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@ body {
 button {
   padding: 2%;
   margin: 5%;
-  border-radius: 100%;
+  border-radius: 300%;
   background: black;
-  color: white
+  color: white;
 
 }
 
@@ -30,4 +30,19 @@ img{
   width: 200px;
   border: 30%;
   border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Abril Fatface"
 }
